--- a/src/wbw/word-by-word-view.scss
+++ b/src/wbw/word-by-word-view.scss
@@ -1,6 +1,3 @@
 .word-by-word-view {
-    border: 1px solid red;
-    display: flex;
-    gap: 20px;
-    direction: rtl;
+    border: 5px solid purple;
 }
