--- a/src/treebank/verse-element.scss
+++ b/src/treebank/verse-element.scss
@@ -1,6 +1,18 @@
 .verse-element {
-    border: 5px solid orange;
-    display: flex;
-    gap: 20px;
+    background: rgb(233, 242, 226);
     direction: rtl;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 15px;
+    row-gap: 20px;
+    padding: 20px;
+    border-radius: 20px;
+
+    .token-element {
+        border: 2px solid rgb(4, 128, 0);
+        padding: 5px;
+        border-radius: 10px;
+        background: white;
+        direction: ltr;
+    }
 }
