--- a/src/wbw/word-by-word-view.scss
+++ b/src/wbw/word-by-word-view.scss
@@ -1,5 +1,9 @@
 .word-by-word-view {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+
+    hr {
+        border: 1px solid blue;
+        width: 100%;
+    }
 }
