--- a/src/wbw/word-by-word-view.scss
+++ b/src/wbw/word-by-word-view.scss
@@ -3,7 +3,11 @@
     flex-direction: column;
 
     hr {
-        border: 1px solid blue;
+        border: none;
+        border-top: 1px solid #e5e5e5;
         width: 100%;
+        height: 0;
+        padding: 0;
+        margin: 20 0;
     }
 }
