Don't link to the lexicon if we don't have any roots.

--- a/src/treebank/token-footer.scss
+++ b/src/treebank/token-footer.scss
@@ -6,5 +6,9 @@
     div {
         font: 0.833em Arial;
         line-height: 1.6em;
+
+        &.phonetic {
+            color: #4886d0;
+        }
     }
 }
