Improved color coding.

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -56,6 +56,30 @@
     color: #ef7d21;
 }
 
+.purple {
+    color: #8126c0;
+}
+
+.purpe-light {
+    color: #9a3cd9;
+}
+
+.blue {
+    color: #257e9c;
+}
+
+.blue-light {
+    color: #2e9abe;
+}
+
+.brown {
+    color: rgb(191, 159, 62);
+}
+
+.brown-light {
+    color: rgb(201, 173, 88);
+}
+
 a,
 a:visited {
     color: #4886d0;
