Improved color theme.

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -73,11 +73,35 @@
 }
 
 .brown {
-    color: rgb(191, 159, 62);
+    color: #bf9f3e;
 }
 
 .brown-light {
-    color: rgb(201, 173, 88);
+    color: #c9ad58;
+}
+
+.rose {
+    color: #fd5162;
+}
+
+.rose-light {
+    color: #fd6675
+}
+
+.gold {
+    color: #817418;
+}
+
+.gold-light {
+    color: #97881c
+}
+
+.red {
+    color: #f4400b;
+}
+
+.red-light {
+    color: #f76c44;
 }
 
 a,
