Complete color coding.

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -104,6 +104,22 @@
     color: #f76c44;
 }
 
+.green {
+    color: #1d6914
+}
+
+.green-light {
+    color: #278e1c;
+}
+
+.pink {
+    color: #a8017b;
+}
+
+.pink-light {
+    color: #d8019c;
+}
+
 a,
 a:visited {
     color: #4886d0;
