--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -8,6 +8,11 @@
     src: url('../fonts/hafs.woff2');
 }
 
+@font-face {
+    font-family: 'Uthmani Hafs';
+    src: url('../fonts/uthmani-hafs.woff2');
+}
+
 .navy {
     color: #1301b8;
 }
