--- a/src/treebank/verse-element.scss
+++ b/src/treebank/verse-element.scss
@@ -22,4 +22,11 @@
     .token-element {
         direction: ltr;
     }
+
+    .end-of-verse {
+        font-family: var(--default-arabic-font-family);
+        font-size: 50px;
+        font-family: Uthmani Hafs;
+        padding-top: 16px;
+    }
 }
