Add footer to home page.

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -24,4 +24,12 @@
         font-size: 22px;
         font-weight: bold;
     }
+
+    hr {
+        margin-top: 40px;
+    }
+
+    .footer {
+        margin-top: 12px;
+    }
 }
