--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -30,10 +30,11 @@
     }
 
     .footer {
-        margin: 20 0;
+        margin: 30 0;
+        font-size: 14px;
 
         .slack {
-            margin-top: 20px;
+            margin-bottom: 20px;
 
             img {
                 height: 35px;
