--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -1,6 +1,6 @@
 :root {
     --default-arabic-font-family: Hafs;
-    --default-pos-tag-font-family: Arial;
+    font-family: Open Sans;
 }
 
 @font-face {
