Black sticky header.

--- a/src/navigation/chapter-header.scss
+++ b/src/navigation/chapter-header.scss
@@ -1,5 +1,10 @@
 .chapter-header {
-    background: #ecd99f;
+    background: #202123;
     text-align: center;
     padding: 10px;
+
+    a,
+    a:visited {
+        color: white;
+    }
 }
