Reload verses on chapter change.

--- a/src/navigation/chapter-header.scss
+++ b/src/navigation/chapter-header.scss
@@ -21,6 +21,8 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    left: 50%;
+    transform: translateX(-50%);
 
     li {
         padding: 10px;
