--- a/src/navigation/chapter-header.scss
+++ b/src/navigation/chapter-header.scss
@@ -1,36 +1,37 @@
 .chapter-header {
-    background: #202123;
+    background: #343540;
     text-align: center;
 
     >a,
     >a:visited {
         display: inline-block;
         color: white;
-        padding: 10px;
+        padding: 12px;
     }
-}
 
-.chapter-popup {
-    display: none;
-    position: absolute;
-    width: 100%;
-    max-width: 200px;
-    height: 250px;
-    overflow-y: auto;
-    background: white;
-    border: 1px solid black;
-    border-top: none;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    left: 50%;
-    transform: translateX(-50%);
 
-    li {
-        padding: 10px;
+    .chapter-popup {
+        display: none;
+        position: absolute;
+        width: 100%;
+        max-width: 200px;
+        height: 250px;
+        overflow-y: auto;
+        background: white;
+        border: 1px solid black;
+        border-top: none;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        left: 50%;
+        transform: translateX(-50%);
+
+        &.show-popup {
+            display: block;
+        }
+
+        li {
+            padding: 10px;
+        }
     }
-}
-
-.chapter-header.show-popup .chapter-popup {
-    display: block;
 }
