Reduce font size on mobile.

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -1,5 +1,8 @@
 :root {
     --default-arabic-font-family: Hafs;
+    --verse-end-font-family: Uthmani Hafs;
+    --arabic-font-size-large: 50px;
+    --arabic-font-size-medium: 30px;
     font-family: Open Sans;
 }
 
