--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -3,7 +3,7 @@
     --verse-end-font-family: Uthmani Hafs;
     --arabic-font-size-large: 50px;
     --arabic-font-size-medium: 30px;
-    font-family: Open Sans;
+    font-family: Noto Sans;
 }
 
 @font-face {
