Restyle + make infinite scroll more reliable (WiP).

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -29,16 +29,11 @@
         margin-top: 40px;
     }
 
-    .footer {
-        margin: 30 0;
-        font-size: 14px;
+    .slack {
+        margin-top: 30px;
 
-        .slack {
-            margin-bottom: 20px;
-
-            img {
-                height: 35px;
-            }
+        img {
+            height: 35px;
         }
     }
 }
