--- a/src/navigation/navigation-container.scss
+++ b/src/navigation/navigation-container.scss
@@ -4,10 +4,6 @@
         position: sticky;
         top: 0;
         z-index: 2;
-    }
-
-    .content {
-        padding: 16px;
-        padding-top: 0;
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.16);
     }
 }
