--- a/src/wbw/word-by-word-view.scss
+++ b/src/wbw/word-by-word-view.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
 
-    hr {
-        margin: 20 0;
+    .verse-element:nth-child(even) {
+        background: #f6f6f6;
     }
 }
