--- a/src/treebank/verse-element.scss
+++ b/src/treebank/verse-element.scss
@@ -2,6 +2,10 @@
     display: flex;
     padding: 15px;
 
+    .verse-number {
+        color: gray;
+    }
+
     .tokens {
         direction: rtl;
         display: flex;
