--- a/src/wbw/word-by-word-view.scss
+++ b/src/wbw/word-by-word-view.scss
@@ -5,4 +5,9 @@
     .verse-element:nth-child(even) {
         background: #f6f6f6;
     }
+
+    .footer {
+        margin-top: 30px;
+        margin-bottom: 50px;
+    }
 }
