--- a/src/wbw/word-by-word.scss
+++ b/src/wbw/word-by-word.scss
@@ -1,3 +1,20 @@
-.chapter-title {
-    padding: 0 15;
+.word-by-word {
+
+    .chapter-title {
+        padding: 0 15;
+    }
+
+    .word-by-word-view {
+        display: flex;
+        flex-direction: column;
+
+        .verse-element:nth-child(even) {
+            background: #f6f6f6;
+        }
+    }
+
+    .footer {
+        margin-top: 30px;
+        margin-bottom: 50px;
+    }
 }
