--- a/src/treebank/verse-element.scss
+++ b/src/treebank/verse-element.scss
@@ -1,41 +1,52 @@
 .verse-element {
-    display: flex;
-    padding: 15px;
 
-    .verse-number {
-        color: gray;
-    }
-
-    .tokens {
-        direction: rtl;
+    .verse-arabic {
         display: flex;
-        flex-wrap: wrap;
-        column-gap: 15px;
-        row-gap: 35px;
-        padding: 20px;
-        border-radius: 20px;
-        flex: 1;
-    }
+        padding: 15px;
 
-    .token-element {
-        direction: ltr;
-    }
-
-    .segment-container {
-        font-family: var(--default-arabic-font-family);
-        font-size: var(--arabic-font-size-large);
-    }
-
-    .end-of-verse {
-        font-family: var(--verse-end-font-family);
-        font-size: var(--arabic-font-size-large);
-    }
-
-    @media only screen and (max-width: 600px) {
-
-        .segment-container,
-        .end-of-verse {
-            font-size: var(--arabic-font-size-medium);
+        .verse-number {
+            color: gray;
         }
+
+        .tokens {
+            direction: rtl;
+            display: flex;
+            flex-wrap: wrap;
+            column-gap: 15px;
+            row-gap: 35px;
+            padding: 20px;
+            border-radius: 20px;
+            flex: 1;
+        }
+
+        .token-element {
+            direction: ltr;
+        }
+
+        .segment-container {
+            font-family: var(--default-arabic-font-family);
+            font-size: var(--arabic-font-size-large);
+        }
+
+        .end-of-verse {
+            font-family: var(--verse-end-font-family);
+            font-size: var(--arabic-font-size-large);
+        }
+
+        @media only screen and (max-width: 600px) {
+
+            .segment-container,
+            .end-of-verse {
+                font-size: var(--arabic-font-size-medium);
+            }
+        }
+    }
+
+    .verse-translation {
+        padding-left: 15px;
+        padding-right: 35px;
+        padding-bottom: 50px;
+        text-align: right;
+        font-style: italic;
     }
 }
