--- a/src/navigation/navigation-header.scss
+++ b/src/navigation/navigation-header.scss
@@ -1,12 +1,19 @@
 .navigation-header {
     background: #343540;
-    text-align: center;
 
     >a,
     >a:visited {
-        display: inline-block;
+        display: flex;
         color: white;
         padding: 12px;
+        align-items: center;
+        justify-content: center;
+
+        .down {
+            color: white;
+            width: 15px;
+            margin-left: 5px;
+        }
     }
 
     .chapter-popup {
