Restrict word-by-word reader view to 1000 pixels wide and make translation font size 90% of default.

--- a/src/treebank/verse-element.scss
+++ b/src/treebank/verse-element.scss
@@ -46,7 +46,7 @@
         padding-left: 15px;
         padding-right: 35px;
         padding-bottom: 50px;
-        text-align: right;
         font-style: italic;
+        font-size: 90%;
     }
 }
