--- a/src/wbw/word-by-word.scss
+++ b/src/wbw/word-by-word.scss
@@ -1,23 +1,28 @@
 .word-by-word {
 
-    .chapter-header {
-        display: flex;
-        align-items: flex-start;
-        padding: 0 15px;
-
-        img {
-            height: 35px;
-            margin-right: 15px;
-            margin-top: 25px;
-        }
-    }
-
     .word-by-word-view {
         display: flex;
         flex-direction: column;
 
-        .verse-element:nth-child(even) {
+        .chapter-header {
+            display: flex;
+            align-items: flex-start;
+            padding: 0 15px;
+
+            img {
+                height: 35px;
+                margin-right: 15px;
+                margin-top: 25px;
+            }
+        }
+
+        .verse-element:nth-child(odd) {
             background: #f6f6f6;
+        }
+
+        @media (min-width: 1000px) {
+            margin: auto;
+            max-width: 1000px;
         }
     }
 
