--- a/src/wbw/word-by-word.scss
+++ b/src/wbw/word-by-word.scss
@@ -6,27 +6,42 @@
 
         .chapter-header {
             display: flex;
-            align-items: flex-start;
-            padding: 0 15px;
+            justify-content: center;
+            align-items: center;
+            padding: 35px 10px;
+            font-size: 24px;
 
             img {
                 height: 35px;
                 margin-right: 15px;
-                margin-top: 25px;
+            }
+        }
+
+        .bismillah {
+            margin-top: 10px;
+            height: 100px;
+            width: auto;
+
+            path {
+                fill: rgb(63, 132, 161);
             }
         }
 
         .verse-element {
-            &:not(:nth-child(2)) {
-                margin-top: 30px;
-            }
+            margin-top: 30px;
 
             &:nth-child(odd) {
                 background: #f6f6f6;
             }
         }
 
-        @media (min-width: 1000px) {
+        @media only screen and (max-width: 600px) {
+            .bismillah {
+                height: 60px;
+            }
+        }
+
+        @media only screen and (min-width: 1000px) {
             margin: auto;
             max-width: 1000px;
         }
