--- a/src/treebank/verse-element.scss
+++ b/src/treebank/verse-element.scss
@@ -1,6 +1,8 @@
 .verse-element {
-    padding: 20px;
     padding-top: 15px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 15px;
 
     .verse-header {
         display: flex;
@@ -19,20 +21,25 @@
         direction: rtl;
         display: flex;
         flex-wrap: wrap;
-        column-gap: 15px;
-        row-gap: 35px;
+        row-gap: 20px;
         flex: 1;
-        margin-top: 10px;
+        margin-top: 5px;
 
         .token-container {
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 8px;
+
+            &:hover {
+                background: rgb(240, 236, 233);
+            }
         }
 
         .end-of-verse {
             font-family: var(--verse-end-font-family);
             font-size: var(--arabic-font-size-large);
+            padding: 7px;
 
             @media only screen and (max-width: 600px) {
                 font-size: var(--arabic-font-size-medium);
@@ -41,7 +48,7 @@
     }
 
     .verse-translation {
-        margin-top: 35px;
+        margin-top: 30px;
         font-style: italic;
         font-size: 90%;
     }
