Fix token highlight color depending on if the alternating verse background is colored or not.

--- a/src/treebank/verse-token.scss
+++ b/src/treebank/verse-token.scss
@@ -6,9 +6,8 @@
     cursor: pointer;
 
     @media only screen and (min-width: 600px) {
-
         &:hover {
-            background: rgb(240, 236, 233);
+            background: #edf3fc;
         }
     }
 }
