--- a/src/wbw/word-by-word.scss
+++ b/src/wbw/word-by-word.scss
@@ -32,6 +32,14 @@
 
             &:nth-child(odd) {
                 background: #f6f6f6;
+
+                .verse-token {
+                    @media only screen and (min-width: 600px) {
+                        &:hover {
+                            background: #e8e4e1;
+                        }
+                    }
+                }
             }
         }
 
