--- a/src/treebank/verse-element.scss
+++ b/src/treebank/verse-element.scss
@@ -11,7 +11,7 @@
             color: gray;
         }
 
-        .copy {
+        .copy-button {
             width: 15px;
             margin-left: 10px;
         }
