Toggle reader mode (displaying an orange border for now).

--- a/src/wbw/word-by-word.scss
+++ b/src/wbw/word-by-word.scss
@@ -4,6 +4,10 @@
         display: flex;
         flex-direction: column;
 
+        &.reader-mode {
+            border: 5px solid orange;
+        }
+
         .chapter-header {
             display: flex;
             justify-content: center;
