--- a/src/wbw/word-by-word.scss
+++ b/src/wbw/word-by-word.scss
@@ -4,10 +4,6 @@
         display: flex;
         flex-direction: column;
 
-        &.reader-mode {
-            border: 5px solid orange;
-        }
-
         .chapter-header {
             display: flex;
             justify-content: center;
@@ -44,6 +40,12 @@
                         }
                     }
                 }
+            }
+        }
+
+        &.reader-mode {
+            .verse-element {
+                border: 5px solid orange;
             }
         }
 
