--- a/src/navigation/navigation-container.scss
+++ b/src/navigation/navigation-container.scss
@@ -4,6 +4,6 @@
         position: sticky;
         top: 0;
         z-index: 2;
-        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.16);
+        box-shadow: 0 5px 20px -10px #000;
     }
 }
