--- a/src/errors/error-page.scss
+++ b/src/errors/error-page.scss
@@ -1,3 +1,18 @@
 .error-page {
-    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    margin: auto;
+    text-align: center;
+    padding: 25px;
+
+    .description {
+        margin-top: 0;
+    }
+
+    .footer {
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
 }
