--- a/src/treebank/arabic-token.scss
+++ b/src/treebank/arabic-token.scss
@@ -1,4 +1,4 @@
-.token-element {
+.arabic-token {
     font-family: var(--default-arabic-font-family);
     font-size: var(--arabic-font-size-large);
 
