Add GitHub project link to main page + improve README.

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -24,8 +24,11 @@
         }
     }
 
-    .slack {
+    .projects {
         margin-top: 30px;
+        display: flex;
+        flex-direction: row;
+        gap: 5px;
 
         img {
             height: 35px;
