--- a/src/treebank/edge-label.scss
+++ b/src/treebank/edge-label.scss
@@ -1,4 +1,8 @@
 .edge-label {
-    border: 1px solid red;
     display: inline-block;
+    font-family: var(--default-arabic-font-family);
+    font-size: 20px;
+    line-height: 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 5px 0px;
 }
