Add Qaf logo to the left of navigation header.

--- a/src/navigation/navigation-header.scss
+++ b/src/navigation/navigation-header.scss
@@ -7,8 +7,14 @@
         justify-content: center;
         position: relative;
 
-        >a,
-        >a:visited {
+        .qaf {
+            position: absolute;
+            left: 0;
+            height: 100%;
+        }
+
+        .chapter-name,
+        .chapter-name:visited {
             display: inline-flex;
             color: white;
             padding: 12px;
