Display verse marks.

--- a/src/wbw/verse-element.scss
+++ b/src/wbw/verse-element.scss
@@ -25,6 +25,11 @@
         flex: 1;
         margin-top: 5px;
 
+        .section-mark,
+        .sajdah-mark {
+            padding: 7px 0px;
+        }
+
         .end-of-verse {
             padding: 7px;
         }
