Render phrase lines.

--- a/src/treebank/dependency-graph-view.scss
+++ b/src/treebank/dependency-graph-view.scss
@@ -10,6 +10,7 @@
             fill: currentColor;
         }
 
+        line,
         path {
             stroke: currentColor;
             stroke-width: 2px;
