--- a/src/treebank/treebank.scss
+++ b/src/treebank/treebank.scss
@@ -3,42 +3,9 @@
 
     .compare {
         display: flex;
-        gap: 50px;
-
-        .bitmap-container {
-            border: 1px solid #e5d2ea;
-
-            .token-table {
-                font: 0.833em Arial;
-                line-height: 1.6em;
-                border-collapse: collapse;
-
-                td {
-                    text-align: center;
-                    padding: 0;
-                    margin: 0;
-
-                    &:nth-child(1) {
-                        width: 112px;
-                    }
-
-                    &:nth-child(2) {
-                        width: 156px;
-                    }
-
-                    &:nth-child(3) {
-                        width: 232px;
-                    }
-
-                    .location {
-                        color: #787878;
-                    }
-                }
-            }
-        }
-
-        .dependency-graph-view {
-            border: 1px solid #e5d2ea;
-        }
+        flex-direction: column;
+        align-items: center;
+        gap: 25px;
+        margin-top: 25px;
     }
 }
