--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -3,6 +3,7 @@
     --verse-end-font-family: Uthmani Hafs;
     --arabic-font-size-large: 50px;
     --arabic-font-size-medium: 30px;
+    --popup-menu-height: 250px;
     font-family: Noto Sans;
 }
 
