--- a/src/navigation/verse-selector.scss
+++ b/src/navigation/verse-selector.scss
@@ -1,9 +1,8 @@
 .verse-selector {
     position: absolute;
-    height: 250px;
-    background: white;
-    border: 1px solid black;
-    border-top: none;
+    height: var(--popup-menu-height);
+    color: white;
+    background: black;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -19,6 +18,7 @@
             padding: 10px;
             padding-right: 25px;
             white-space: nowrap;
+            color: white;
         }
     }
 }
