--- a/src/wbw/verse-element.scss
+++ b/src/wbw/verse-element.scss
@@ -39,5 +39,8 @@
         margin-top: 30px;
         font-style: italic;
         font-size: 90%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
     }
 }
