--- a/src/treebank/graph-word.scss
+++ b/src/treebank/graph-word.scss
@@ -1,7 +1,7 @@
-.graph-token {
+.graph-word {
     display: inline-block;
 
-    .token-content {
+    .word-content {
         display: flex;
         flex-direction: column;
         align-items: center;
