--- a/src/wbw/chapter-header.scss
+++ b/src/wbw/chapter-header.scss
@@ -1,43 +1,52 @@
 .chapter-header {
-    padding: 35px 25px;
+    padding: 25px;
+    padding-top: 15px;
     font-size: 24px;
-    display: grid;
-    grid-template-columns: 1fr auto auto 1fr;
-    align-items: center;
 
-    .city {
-        grid-column: 2 / 3;
-        text-align: right;
-
-        img {
-            height: 35px;
-            margin-right: 15px;
-        }
-    }
-
-    .title {
-        text-align: center;
-        grid-column: 3 / 4;
-    }
-
-    @media only screen and (max-width: 600px) {
-        padding: 25px;
-        grid-template-columns: 1fr auto minmax(0, 1fr);
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr auto auto 1fr;
+        align-items: center;
 
         .city {
-            grid-column: 1 / 2;
+            grid-column: 2 / 3;
+            text-align: right;
+
+            img {
+                height: 35px;
+                margin-right: 15px;
+            }
         }
 
         .title {
-            grid-column: 2 / 3;
+            text-align: center;
+            grid-column: 3 / 4;
+        }
 
-            .space {
-                display: none;
+        @media only screen and (max-width: 600px) {
+            grid-template-columns: 1fr auto minmax(0, 1fr);
+
+            .city {
+                grid-column: 1 / 2;
             }
 
-            .translation {
-                display: block;
+            .title {
+                grid-column: 2 / 3;
+
+                .space {
+                    display: none;
+                }
+
+                .translation {
+                    display: block;
+                }
             }
         }
+    }
+
+    .page-title {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
     }
 }
