Render hidden words.

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -4,6 +4,7 @@
     --arabic-font-size-large: 50px;
     --arabic-font-size-medium: 30px;
     --popup-menu-height: 250px;
+    --token-header-height: 75px;
     font-family: Noto Sans;
 }
 
@@ -127,6 +128,14 @@
 
 .pink-light {
     color: #d8019c;
+}
+
+.silver {
+    color: #b4b4b4;
+}
+
+.sliver-light {
+    color: #bebebe;
 }
 
 body {
