--- a/src/treebank/token-header.scss
+++ b/src/treebank/token-header.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: var(--token-header-height);
 
     div {
         font: 0.833em Arial;
