Fix hidden words rendering.

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -4,7 +4,7 @@
     --arabic-font-size-large: 50px;
     --arabic-font-size-medium: 30px;
     --popup-menu-height: 250px;
-    --token-header-height: 75px;
+    --token-header-height: 90px;
     font-family: Noto Sans;
 }
 
@@ -134,7 +134,7 @@
     color: #b4b4b4;
 }
 
-.sliver-light {
+.silver-light {
     color: #bebebe;
 }
 
