Treebank navigation (WiP).

--- a/src/navigation/navigation-bar.scss
+++ b/src/navigation/navigation-bar.scss
@@ -1,11 +1,11 @@
-nav {
+.navigation-bar {
     position: sticky;
     top: 0;
     z-index: 2;
     background: #343540;
     box-shadow: 0 5px 20px -10px #000;
 
-    .navigation-bar {
+    header {
         display: flex;
         justify-content: center;
         position: relative;
