Bugfix pointed 'ya' on edge labels + preload fonts during boot up sequence.

--- a/src/components/sajdah-mark.scss
+++ b/src/components/sajdah-mark.scss
@@ -1,5 +1,5 @@
 .sajdah-mark {
-    font-family: Noto Sans;
+    font-family: var(--default-font-family);
     font-size: 60px;
 
     @media only screen and (max-width: 600px) {
