--- a/src/renderer2/svg-view.scss
+++ b/src/renderer2/svg-view.scss
@@ -5,4 +5,16 @@
         stroke: red;
         fill: none;
     }
+
+    .a {
+        fill: green;
+    }
+
+    .b {
+        fill: orange;
+    }
+
+    .c {
+        fill: blue;
+    }
 }
