Connect new SVG renderer to treebank data.

--- a/src/renderer2/svg-test.scss
+++ b/src/renderer2/svg-test.scss
@@ -1,3 +1,23 @@
 .svg-test {
     margin: 25px;
+    display: flex;
+    flex-direction: column;
+
+    .navigation {
+        display: inline-flex;
+        align-items: center;
+        gap: 20px;
+
+        .location {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+        }
+    }
+
+    .svg-view {
+        border: 1px solid blue;
+        margin-top: 25px;
+
+    }
 }
