--- a/src/renderer2/svg-test.scss
+++ b/src/renderer2/svg-test.scss
@@ -18,6 +18,7 @@
     .svg-view {
         border: 1px solid blue;
         margin-top: 25px;
-
+        max-width: 100%;
+        height: auto;
     }
 }
