Simplify SVG styles.

--- a/src/renderer2/svg-view.scss
+++ b/src/renderer2/svg-view.scss
@@ -1,12 +1,12 @@
 .svg-view {
     border: 1px solid blue;
 
-    .box {
+    rect {
         stroke: red;
         fill: none;
     }
 
-    .segment {
+    text {
         fill: currentColor;
     }
 }
