Bugfix SVG scaling.

--- a/src/treebank2/treebank2.scss
+++ b/src/treebank2/treebank2.scss
@@ -20,7 +20,7 @@
         gap: 25px;
         margin-top: 25px;
 
-        .svg-view {
+        .syntax-graph-view2 {
             max-width: 100%;
             height: auto;
         }
