Fix location color.

--- a/src/treebank2/syntax-graph-view2.scss
+++ b/src/treebank2/syntax-graph-view2.scss
@@ -10,6 +10,10 @@
     tspan {
         fill: currentColor;
 
+        &.location {
+            color: #787878;
+        }
+
         &.phonetic {
             color: #4886d0;
         }
