Tweak SVG styles.

--- a/src/treebank2/treebank2.scss
+++ b/src/treebank2/treebank2.scss
@@ -23,6 +23,7 @@
         .syntax-graph-view2 {
             max-width: 100%;
             height: auto;
+            margin-top: 1px; // TODO: REMOVE!!
         }
 
         img {
