Render a test arc.

--- a/src/treebank2/syntax-graph-view2.scss
+++ b/src/treebank2/syntax-graph-view2.scss
@@ -16,4 +16,9 @@
     circle {
         fill: currentColor;
     }
+
+    path {
+        stroke: currentColor;
+        stroke-width: 2px;
+    }
 }
