--- a/src/treebank2/treebank2.scss
+++ b/src/treebank2/treebank2.scss
@@ -24,6 +24,7 @@
             max-width: 100%;
             height: auto;
             margin-top: 1px; // TODO: REMOVE!!
+            border: 1px solid red;
         }
 
         img {
