Render arc arrows.

--- a/src/treebank2/syntax-graph-view2.scss
+++ b/src/treebank2/syntax-graph-view2.scss
@@ -13,13 +13,14 @@
         }
     }
 
-    circle {
-        fill: currentColor;
-    }
-
     line,
     path {
         stroke: currentColor;
         stroke-width: 2px;
+    }
+
+    circle,
+    polygon {
+        fill: currentColor;
     }
 }
