--- a/src/treebank2/treebank2.scss
+++ b/src/treebank2/treebank2.scss
@@ -20,10 +20,9 @@
         gap: 25px;
         margin-top: 25px;
 
-        .syntax-graph-view2 {
+        .syntax-graph-view {
             max-width: 100%;
             height: auto;
-            margin-top: 1px; // TODO: REMOVE!!
         }
 
         img {
